- Added some projects - Added screenshots - Edited links and removed some redundant social links